--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -23,17 +23,25 @@
   <div class="background-image">
     <nav class="home-navigation">
       <ul class="navigation-links">
-        <li class="navigation-item">
-          <a class="nav-links logo-nav" href="#lp-landing">LP</a>
+        <li class="navigation-item home-item">
+          <a class="nav-links" href="/">
+            <div style="background:orange;width:50px;height:50px;margin-left:45%;border-radius:100px" class="b-ball2">
+              <div style="width:5%;height:100%;background:black;margin-left:47.5%"></div>
+              <div style="width:100%;height:5%;background:black;position:relative;top:-47.5%;"></div>
+              <div style="width: 70%;height: 66%;background: none;position:relative;top: -88.0%;border-left-color: black;border-left-style: solid;left: 60%;border-radius: 50px;b;border-width: 6px;"></div>
+              <div style="width: 70%;height: 66%;background: none;position:relative;top: -152%;border-right-color: black;border-right-style: solid;left: -30%;border-radius: 50px;b;border-width: 6px;"></div>
+
+            </div>
+          </a>
         </li>
         <li class="navigation-item">
-          <a class="nav-links" href="#about-us">About Us</a>
+          <a class="nav-links" href="#about-me">About Me</a>
         </li>
         <li class="navigation-item">
-          <a class="nav-links" href="#what-we-do">What we do</a>
+          <a class="nav-links" href="#tech-we-use">Technolgies Used</a>
         </li>
-        <li class="navigation-item">
-          <a class="nav-links" href="#tech-we-use">Technolgies We Use</a>
+         <li class="navigation-item">
+          <a class="nav-links" href="/projects">Projects</a>
         </li>
       </ul>
     </nav>
@@ -42,107 +50,68 @@
     </div>
      <div class="offset-2"></div>
     <div class="slog-desc" id="lp-landing">
-      <span class="slogan-descript logo-center">LP</span><br>
-      <span class="slogan-descript">LP Software Consulting Inc.</span><br><br>
-      <span class="slogan-descript-2">Leaders in Tech Innovation</span>
+      <span class="slogan-descript"></span><br>
+      <div style="background:orange;width:100px;height:100px;margin-left:45%;border-radius:100px" class="b-ball">
+        <div style="width:5%;height:100%;background:black;margin-left:47.5%"></div>
+        <div style="width:100%;height:5%;background:black;position:relative;top:-47.5%;"></div>
+        <div style="width: 70%;height: 66%;background: none;position:relative;top: -88.0%;border-left-color: black;border-left-style: solid;left: 60%;border-radius: 50px;b;border-width: 6px;"></div>
+        <div style="width: 70%;height: 66%;background: none;position:relative;top: -152%;border-right-color: black;border-right-style: solid;left: -30%;border-radius: 50px;b;border-width: 6px;"></div>
+
+      </div>
+      <span class="slogan-descript">Lokesh Podipireddy</span><br><br>
+      <span class="slogan-descript-2">Creative Developer & Baller</span>
     </div>
   </div>
 
 
   <div class="container">
-    <div class="offset-2"></div>
-    <h1 class="center-header">What We Do</h1>
-    <div class="offset-2"></div>
-    <div class="row descript" id="what-we-do">
-      <div class="col-sm-4">
-        <h3>Planning and Research</h3>
-        <div class="offset-2"></div>
-        <i class="fa fa fa-binoculars fa-5x" aria-hidden="true"></i>
-        <div class="descript-text">
-         Planning and Research are crucial for any project and that philosophy is something we abide by here at LP Software Consulting. We perform in-depth investigations on all aspects of the business and product that we are dealing with in order to deliver the best solution. From Market Research to stakeholder analysis to software auditing, we do not shy away from diving head first into any project.  
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <h3>Design</h3>
-        <div class="offset-2"></div>
-        <i class="fa fa-pencil fa-5x" aria-hidden="true"></i>
-        <div class="descript-text">
-          At LP Software Consulting, we take pride in designing applications with elegant User Interface paired with a seemless User Experience that will make your application easy to use. We use the best tools in the business to align your product with the latest design trends.   
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <h3>Coding</h3>
-        <div class="offset-2"></div>
-        <i class="fa fa-code fa-5x" aria-hidden="true"></i>
-        <div class="descript-text">
-         The coding part of any product development process brings life to the product and at LP Software Consulting, we ensure your product is seemless. We use the latest in technology to deliver timely results while also ensuring that the software performs without any errors. 
-        </div>
-      </div>
-    </div>
-    <div class="offset-2" style="border-bottom:solid"></div>
-    <div class="offset-2"></div>
 
-    <h1 class="center-header">About Us</h1>
-    <div class="row descript" id="about-us">
+    <h1 class="center-header">About Me</h1>
+    <div class="row descript" id="about-me">
       <div class="col-sm-12">
-        <h4 class="center-header">"Combining leading-edge business strategy and IT knowledge, to develop efficient and effective solutions that keep businesses one-step ahead"</h4>
+        <h4 class="center-header">"Hello World"</h4>
         <div class="descript-text">
-         LP consulting was founded in July 2017 and has since been expanding. In a short amount of time we have delivered quality products with great customer satisfaction. We are currently looking to take on more projects and help businesses grow. We have developed applications for Emergency responders such as fire fighters and police officers to communicate effectively which are being used in realtime. We have also worked with Print-A-Pal, a company that specializes in 3D printing technology. 
+         I am a software developer from Waterloo, Canada with a specialization in web technologies. I have wide range knowledge in frontend and backend with professional experience in Ruby on Rails, Laravel, AngularJS and EmberJS. Feel free to take a look at my projects and work experience and message me with any inquries. 
         </div>
       </div>
 
-      <div class="col-sm-12">
-        <div class="portfolio">
-          <div class="tiles">
-            <div class="tile-flipper">
-              <div class="tiles-front command-wear">
-                <span class="tiles-text">k         </span>
-              </div>
-              <div class="tiles-back">
-                <span class="tiles-text">k</span>
-                <div class="company-info">
-                  Realtime GPS tracking and communication app used by emergency responders such as Firefighter, Police Officers and Paramedics
-                </div>
-                <a href="http://commandwear.com">CommandWear</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="tiles">
-            <div class="tile-flipper">
-              <div class="tiles-front print-a-pal">
-                <span class="tiles-text">k         </span>
-              </div>
-              <div class="tiles-back">
-                <span class="tiles-text">k</span>
-                <div class="company-info">A 2D drawing application that renders 3D images that can also produce files for 3D printing </div>
-                <a href="http://printapal.com">Print-a-Pal</a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
     </div>
 
     <div class="offset-2" style="border-bottom:solid"></div>
     <div class="offset-2"></div>
 
-    <h1 class="center-header">Technolgies We Use</h1>
+    <h1 class="center-header">Technolgies Used</h1>
     <div class="row descript" id="tech-we-use">
-      <div class="col-sm-3">
+      <div class="col-sm-3 dev-icons ror">
         <img src="images/ror-logo.png" alt="ruby on rails icon" width="150" height="150">
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 dev-icons php">
         <img src="images/php.png" alt="php icon" width="150" height="150">
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 dev-icons angular">
         <img src="images/angularjs.png" alt="angular icon" width="150" height="150">
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 dev-icons emberjs">
         <img src="images/ember.png" alt="ember icon" width="150" height="150">
       </div>
     </div>
+    <div class="row">
+      <div class="dev-descript ror-text">
+        Ruby on Rails was the first backend web development framework I was exposed to in 2014 and has been my favourite way to develop web applications. I have over a year's worth of professional experience with ruby on rails framework and have used this as my backend framework for personal projects.
+      </div><br>
+
+      <div class="dev-descript php-text">
+        I have used Laravel Framework for six months professionally along with knockoutJS as the frontend framework when I was working at bincity. Laravel is extremely similar to ruby on rails which follows the MVC framework and has a similar commandline interface for generating models and controllers. 
+      </div><br>
+      <div class="dev-descript angular-text">
+        I used angularJS for six months as frontend framework for 6 months
+      </div><br>
+      <div class="dev-descript emberjs-text">
+        I used emberJS for three months as frontend framework.
+      </div>
+
+    </div>
+
 
     <div class="offset-2" style="border-bottom:solid"></div>
     <div class="offset-2"></div>
@@ -186,7 +155,7 @@
     <div class="container">
         <!--FOOTER DETAILS-->
         <p class="text-center">
-            © 2017 <strong>LP Software Consulting Inc.</strong>
+            © 2017 <strong>Lokesh Podipireddy</strong>
         </p>
     </div>
 </footer>
@@ -205,5 +174,24 @@ $('.submit').click( function() {
       alert(msg["message"]);
     }
   });
+})
+
+$('.dev-icons').click(function(event) {
+  $(".dev-icons").removeClass("active-state");
+  $(this).addClass("active-state");
+  var elClass = $(this).attr('class')
+  if (elClass.indexOf('ror') > 0) {
+    $('.dev-descript').hide();
+    $('.ror-text').show();
+  } else if (elClass.indexOf('php') > 0){
+    $('.dev-descript').hide();
+    $('.php-text').show();
+  } else if (elClass.indexOf('angular') > 0){
+    $('.dev-descript').hide();
+    $('.angular-text').show();
+  } else if (elClass.indexOf('emberjs') > 0){
+    $('.dev-descript').hide();
+    $('.emberjs-text').show();
+  }
 })
 </script>
